# LawnMower_URDF_Sim

./: README.md
colorMarker_dev_ws-main/: README.md
colorMarker_dev_ws-main/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
colorMarker_dev_ws-main/install/bringup/share/bringup/: local_setup.sh  package.sh
colorMarker_dev_ws-main/install/bringup/share/bringup/launch/: path_mapper.launch.xml
colorMarker_dev_ws-main/install/bringup/share/bringup/worlds/: empty.world.xml
colorMarker_dev_ws-main/install/manual_ctrl/lib/manual_ctrl/: path_mapper.py
colorMarker_dev_ws-main/install/manual_ctrl/share/manual_ctrl/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
colorMarker_dev_ws-main/install/robot_model/share/robot_model/: package.sh
colorMarker_dev_ws-main/install/robot_model/share/robot_model/launch/: grass_cutter.launch.xml  launch_grass_cutter.launch.py
colorMarker_dev_ws-main/log/: latest_build
colorMarker_dev_ws-main/src/bringup/: CMakeLists.txt
colorMarker_dev_ws-main/src/bringup/rviz/: rviz_config.rviz
colorMarker_dev_ws-main/src/manual_ctrl/: CMakeLists.txt
colorMarker_dev_ws-main/src/maps/: map2.pgm  map3.pgm  map3.yaml  map4.pgm  map4.yaml
colorMarker_dev_ws-main/src/robot_model/: CMakeLists.txt
colorMarker_dev_ws-main/src/robot_model/launch/: launch_grass_cutter.launch.py  path_mapper.launch.py
colorMarker_dev_ws-main/src/robot_model/urdf/: lawn_mower.gazebo  lawn_mower.urdf.xacro  mower_cam_left.xacro  mower_cam_right.xacro
(+9 files in other folders)
